2008-04-09  Ulrich Drepper  <drepper@redhat.com>

	[BZ #5209]
	* sysdeps/unix/sysv/syscalls.list: The times syscall doesn't return
	an error value.

	* stdlib/tst-makecontext.c: Change parameter to cf to negative
	value to check for correct sign extension.

	[BZ #5436]
	* sysdeps/unix/sysv/linux/x86_64/makecontext.c (__makecontext):
	Copy 64-bit parameter values even though this is not required in
	the standard.

	* sysdeps/unix/sysv/linux/x86_64/vfork.S (__vfork): Record return
	PC save.

2008-02-14  Daniel Jacobowitz  <dan@codesourcery.com>

	* sysdeps/unix/sysv/linux/i386/vfork.S (__vfork): Record return
	PC save.

2008-04-09  Jakub Jelinek  <jakub@redhat.com>

	* nss_files/files-XXX.c (_nss_files_getXXent_r): Restore saved errno.

2008-04-09  Ulrich Drepper  <drepper@redhat.com>

	[BZ #5998]
	* libio/iofwrite.c (_IO_fwrite): Return correct count if flushing
	in line-buffered stream failed.
	* libio/iofwrite_u.c (fwrite_unlocked): Likewise.

2008-04-08  Ulrich Drepper  <drepper@redhat.com>

	[BZ #6024]
	* scripts/abi-versions.awk: If the version specified by
	--enable-oldest-abi is older than the first version for this
	architecture, use the default version.

	* locale/programs/ld-collate.c (collate_read): Ignore script lines
	as well when ignoring the whole category.

2008-04-07  Ulrich Drepper  <drepper@redhat.com>

	[BZ #6042]
	* sysdeps/unix/sysv/linux/net/ethernet.h: Add a few more
	ETHERTYPE_* definitions.
	Patch partly by Aurelien Jarno <aurelien@aurel32.net>.

2008-04-07  Jakub Jelinek  <jakub@redhat.com>

	* stdlib/mbtowc.c (__no_r_state): Remove.
	(mbtowc): New static state variable.  Use it instead of
	__no_r_state.
	* stdlib/wctomb.c (__no_r_state): Remove extern decl.
	(__wctomb_state): New hidden variable.
	(wctomb): Use __wctomb_state instead of __no_r_state.
	* debug/wctomb_chk.c (__no_r_state): Remove extern decl.
	(__wctomb_state): New extern decl.
	(__wctomb_chk): Use __wctomb_state instead of __no_r_state.
